fix: fixed z-index of animated element

--- a/src/components/Usecases/Usecases.css
+++ b/src/components/Usecases/Usecases.css
@@ -371,6 +371,9 @@
     width: 75%;
     border-radius: 10px;
     border: 1px solid var(--dark-600);
+    background-color: var(--dark-300);
+    z-index: 20;
+    position: relative;
 }
 
 #emailMaven #email-icon {
@@ -378,6 +381,7 @@
     right: 0;
     top: 0;
     height: 100%;
+    z-index: 0;
 }
 
 #emailMaven .email-body{
@@ -393,6 +397,10 @@
     width: 100%;
     height: 100%;
     padding: 2rem;
+}
+
+.border-top-grey{
+    border-top: 1px solid var(--dark-600);
 }
 
 #emailMaven .card-headline{
